<resources>

    <string name="app_name">Постановка на баланс</string>

    // Заголовки экранов
    <string name="setting_tasks">Задания на постановку</string>
    <string name="good_list">Список товаров</string>
    <string name="task_card">Карточка задания</string>
    <string name="good_info">Информация о товаре</string>

    // Наименование вкладок
    <string name="to_processing">К обработке</string>
    <string name="processed">Обработанные</string>
    <string name="search">Поиск</string>

    // Наименования колонок


    // Информационные сообщения
    <string name="unsaved_data_found_on_device">На устройстве обнаружены несохраненные данные. Перейти к данным?</string>
    <string name="make_task_processed_and_close">Перевести задание в статус \"Обработано\" и закрыть его для редактирования?</string>
    <string name="success_save_report">Успешно сохранено в SAP ERP</string>
    <string name="unprocessed_goods_in_task">В задании остались необработанные товары.\nВы можете:\nСохранить в \"ОПУБЛИКОВАНО\" - для последующего продолжения обработки задания;\nСохранить в \"ОБРАБОТАНО\" - для завершения обработки задания.</string>
    <string name="required_to_destroy_non_glued_marks">Требуется уничтожить неоклеенные марки!</string>
    <string name="good_is_missing_from_task">Товар %1$s отсутствует в задании. Добавление невозможно.</string>
    <string name="mark_already_processed">Марка уже обработана.</string>
    <string name="invalid_barcode_format_scanned">Отсканирован неверный формат штрихкода.</string>
    <string name="scanned_mark_is_not_on_task">Отсканированная марка не числится в задании.</string>
    <string name="task_unsent_data_will_be_deleted">По заданию \"%1$s\" будут удалены все непереданные данные</string>
    <string name="unsaved_data_will_be_removed">Несохраненные данные будут удалены. Продолжить?</string>
    <string name="scanned_mark_belongs_to_another_good">Отсканированная марка принадлежит товару %1$s</string>

    // Описание иконок
    <string name="marked_good">Маркированный товар</string>

    // Наименование кнопок
    <string name="work_with_tasks">Работа с заданиями</string>

    // Подсказки
    <string name="enter_sap_or_barcode">Введите SAP-код или штрихкод</string>
    <string name="enter_task_number_or_login">Введите номер задания или логин</string>

    // Строки в коде
    <string name="tk_number">ТК - %1$s</string>
    <string name="processing_progress">%1$s из %2$s</string>
    <string name="total_with_converting_info">Итого %1$s</string>

    // Разное
    <string name="mark_quantity_to_processing">Количество марок к обработке</string>
    <string name="mark_type">Тип марки</string>
    <string name="shoes_man">Обувь мужская</string>
    <string name="shoes_woman">Обувь женская</string>
    <string name="shoes_children">Обувь детская</string>
    <string name="shoes_unisex">Обувь унисекс</string>

</resources>