<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lenta.bp15.features.search_task.SearchTaskFragment">

    <data>

        <variable
            name="vm"
            type="com.lenta.bp15.features.search_task.SearchTaskViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Количество -->
        <LinearLayout style="@style/LinearRowStyle">

            <LinearLayout style="@style/LinearCellStyle">

                <TextView
                    style="@style/CellTextStyle"
                    android:text="@string/good"
                    android:textColor="@color/color_text_title_header" />

            </LinearLayout>

            <View style="@style/VerticalDivider" />

            <LinearLayout
                style="@style/LinearCellStyle"
                android:layout_weight="2">

                <EditText
                    style="@style/CellEditTextStyle"
                    android:text="@={vm.number}"
                    android:inputType="number"
                    android:maxLength="18"
                    tools:text="000044" />

            </LinearLayout>

        </LinearLayout>

        <View style="@style/HorizontalDivider" />

        <!-- Тип марки -->
        <LinearLayout style="@style/LinearRowStyle">

            <LinearLayout style="@style/LinearCellStyle">

                <TextView
                    style="@style/CellTextStyle"
                    android:text="@string/mark_type"
                    android:textColor="@color/color_text_title_header" />

            </LinearLayout>

            <View style="@style/VerticalDivider" />

            <LinearLayout
                style="@style/LinearCellStyle"
                android:layout_weight="2"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_8dp"
                    android:checked="@={vm.isMan}"
                    app:clearOthersAfterChecked="@{vm.clearAllMarkType}"
                    app:currentState="@{vm.isMan}" />

                <TextView
                    style="@style/CellTextStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/shoes_man" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout style="@style/LinearRowStyle">

            <LinearLayout style="@style/LinearCellStyle" />

            <View style="@style/VerticalDivider" />

            <LinearLayout
                style="@style/LinearCellStyle"
                android:layout_weight="2"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_8dp"
                    android:checked="@={vm.isWoman}"
                    app:clearOthersAfterChecked="@{vm.clearAllMarkType}"
                    app:currentState="@{vm.isWoman}" />

                <TextView
                    style="@style/CellTextStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/shoes_woman" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout style="@style/LinearRowStyle">

            <LinearLayout style="@style/LinearCellStyle" />

            <View style="@style/VerticalDivider" />

            <LinearLayout
                style="@style/LinearCellStyle"
                android:layout_weight="2"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_8dp"
                    android:checked="@={vm.isChildren}"
                    app:clearOthersAfterChecked="@{vm.clearAllMarkType}"
                    app:currentState="@{vm.isChildren}" />

                <TextView
                    style="@style/CellTextStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/shoes_children" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout style="@style/LinearRowStyle">

            <LinearLayout style="@style/LinearCellStyle" />

            <View style="@style/VerticalDivider" />

            <LinearLayout
                style="@style/LinearCellStyle"
                android:layout_weight="2"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_8dp"
                    android:checked="@={vm.isUnisex}"
                    app:clearOthersAfterChecked="@{vm.clearAllMarkType}"
                    app:currentState="@{vm.isUnisex}" />

                <TextView
                    style="@style/CellTextStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/shoes_unisex" />

            </LinearLayout>

        </LinearLayout>

        <View style="@style/HorizontalDivider" />

    </LinearLayout>

</layout>